# claude-cost-attribution

./: EVIDENCE.md  PRD.md  README.md  parking_lot.md  pricing.json  pyproject.toml
ccat/: __init__.py  attribution.py  burnrate.py  cli.py  parser.py  pricing.py  report.py
examples/: sample-report.html  sample-report.md
fixtures/claude_projects/-P-demo-other/: session-dddd4444.jsonl
fixtures/claude_projects/-P-demo-tutor/: session-aaaa1111.jsonl
fixtures/claude_projects/-P-demo-tutor/session-aaaa1111/subagents/: agent-bbbb2222.jsonl  agent-bbbb2222.meta.json  agent-cccc3333.jsonl  agent-cccc3333.meta.json
tests/: test_ccat.py
