[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-cost-attribution"
version = "0.1.0"
description = "Cache-aware Claude Code cost attribution by project, skill, and subagent, plus a plan-cap burn-rate gauge. Deterministic, stdlib-only, offline."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ben Godgart" }]
keywords = ["claude", "claude-code", "cost", "tokens", "devtools", "usage-analytics"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
ccat = "ccat.cli:main"

[project.urls]
Homepage = "https://github.com/bengodgart/claude-cost-attribution"

[tool.setuptools]
packages = ["ccat"]
